--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas\n",
     "import requests\n",
     "from bs4 import BeautifulSoup"
    ]
@@ -18,6 +19,68 @@
    "source": [
     "html = '';\n",
     "url = 'https://brickset.com/sets/year-2023';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "req = requests.get(url)\n",
+    "html = req.text\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kits_list = []\n",
+    "for item in soup.find_all('article', attrs={'class': 'set'}):\n",
+    "    details = {\n",
+    "        'title': item.find('h1').text,\n",
+    "        'image': item.find('img')['src'],\n",
+    "        'partial_link': item.find('div', attrs={'class': 'meta'}).find('a')['href']\n",
+    "    }\n",
+    "    kits_list.append(details)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m250.0/250.0 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.1.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_kits = pandas.DataFrame.from_dict(kits_list)\n",
+    "\n",
+    "df_kits.to_excel('./dados.xlsx')"
    ]
   }
  ],
